--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'null';
 @import 'fonts';
 @import 'parts/variables';
+@import 'parts/mixins';
 
 @import 'parts/base';
 @import 'parts/header';
