--- a/src/scss/parts/variables.scss
+++ b/src/scss/parts/variables.scss
@@ -3,7 +3,8 @@ $main-container-size: 1280px;
 
 //colors
 $color-white: #ffffff;
-
+$color-grey: #cfcfcf;
+$color-green: #42af6c;
 //brakepoints
 $md-1: 320px;
 $md-2: 480px;
