--- a/src/scss/parts/variables.scss
+++ b/src/scss/parts/variables.scss
@@ -5,6 +5,8 @@ $main-container-size: 1280px;
 $color-white: #ffffff;
 $color-grey: #cfcfcf;
 $color-green: #42af6c;
+$color-green-sub: #21924c;
+$color-balck-font: #333942;
 //brakepoints
 $md-1: 320px;
 $md-2: 480px;
