--- a/src/scss/parts/variables.scss
+++ b/src/scss/parts/variables.scss
@@ -4,6 +4,7 @@ $main-container-size: 1280px;
 //colors
 $color-white: #ffffff;
 $color-grey: #cfcfcf;
+$color-grey-mod: #a6a6a6;
 $color-green: #42af6c;
 $color-green-sub: #21924c;
 $color-balck-font: #333942;
