--- a/src/scss/parts/main.scss
+++ b/src/scss/parts/main.scss
@@ -22,6 +22,8 @@
   }
   &__benefits {
   }
+  &__questions {
+  }
 }
 //preview block
 .preview-screen {
@@ -408,6 +410,247 @@
       font-size: 12px;
       margin-top: 20px;
       margin-top: 10px;
+    }
+  }
+}
+
+//questions block
+
+.questions {
+  &__container {
+    position: relative;
+    top: calc(50% + 40px);
+    transform: translate(0px, -50%);
+
+    @media screen and (max-width: $md-2) {
+      top: calc(50% + 20px);
+    }
+  }
+
+  &__inner {
+  }
+
+  &__heading {
+    font-family: MontserratAlternates;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 120%;
+    color: #1f1b20;
+    max-width: 810px;
+    & span {
+      color: $color-green;
+    }
+
+    @media (max-width: 1200px), (max-height: 800px) {
+      font-size: 30px;
+      text-align: center;
+      margin: 0 auto;
+    }
+    @media (max-width: $md-4), (max-height: 600px) {
+      font-size: 24px;
+    }
+    @media (max-width: $md-3), (max-height: 500px) {
+      font-size: 18px;
+    }
+    @media (max-width: $md-2), (max-height: 420px) {
+      max-width: 270px;
+    }
+  }
+
+  &__subtitle {
+    font-size: 16px;
+    line-height: 200%;
+    color: $color-grey-mod;
+    margin-top: 8px;
+    letter-spacing: 0.02em;
+    @media (max-width: 1200px), (max-height: 800px) {
+      display: none;
+    }
+  }
+
+  &__form {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media (max-width: $md-4), (max-height: 600px) {
+      margin-top: 10px;
+    }
+  }
+
+  &__input {
+    min-height: 40px;
+    border: 1px solid $color-green;
+    max-width: 600px;
+    width: 100%;
+    padding: 5px 20px;
+    @media (max-width: $md-3), (max-height: 500px) {
+      padding: 4px 10px;
+    }
+  }
+
+  &__send-button {
+    height: 40px;
+    width: 40px;
+    background: url('../../img/icons/search-icon.svg') center/26px no-repeat;
+    background-color: $color-green;
+
+    @media screen and (min-width: $md-2) {
+      transition: background-color 0.3s ease 0s;
+      &:hover {
+        background-color: $color-green-sub;
+      }
+    }
+  }
+
+  &__examples {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 20px -10px -10px -10px;
+    align-items: flex-start;
+    @media (max-width: 1200px), (max-height: 800px) {
+      margin: 10px -10px -10px -10px;
+    }
+    @media (max-width: $md-4), (max-height: 600px) {
+      margin: 5px -5px -5px -5px;
+    }
+    @media (max-width: $md-3), (max-height: 500px) {
+      margin: 10px 0px 0px 0px;
+    }
+    @media (max-width: $md-2), (max-height: 420px) {
+      display: none;
+    }
+  }
+
+  &__example {
+    flex: 0 1 calc(33.333% - 20px);
+    margin: 10px 10px;
+    background: $color-white;
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    padding: 20px 30px;
+    @media (max-width: 1200px), (max-height: 800px) {
+      padding: 12px 14px;
+    }
+    @media (max-width: $md-4), (max-height: 600px) {
+      flex: 0 1 calc(50% - 10px);
+      margin: 5px 5px;
+
+      &:nth-child(3) {
+        display: none;
+      }
+    }
+
+    @media (max-width: $md-3), (max-height: 500px) {
+      &:nth-child(2) {
+        display: none;
+      }
+      flex: 0 1 100%;
+      margin: 0px;
+    }
+  }
+  &__all-questions-inner {
+    text-align: center;
+    margin-top: 30px;
+    @media (max-width: 1200px), (max-height: 800px) {
+      margin-top: 20px;
+    }
+    @media (max-width: $md-4), (max-height: 600px) {
+      margin-top: 10px;
+    }
+  }
+  &__all-questions {
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 141%;
+    color: #7d7d7d;
+    padding: 10px;
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 4px;
+      left: 50%;
+      width: calc(100% - 20px);
+      height: 1px;
+      background-color: $color-green;
+      transform: translate(-50%, 0px);
+      transition: width 0.3s ease 0s;
+    }
+
+    @media screen and (min-width: $md-2) {
+      &:hover {
+        &::before {
+          width: 70%;
+        }
+      }
+    }
+  }
+
+  &__decor-image {
+    position: absolute;
+    opacity: 0.8;
+
+    &_first {
+      top: 60%;
+      left: -320px;
+      transform: translate(0px, -50%) rotate(30deg);
+      z-index: -1;
+      width: 300px;
+      @media (max-width: 1310px), (max-height: 540px) {
+        display: none;
+      }
+    }
+    &_second {
+      top: 20%;
+      right: -200px;
+      transform: translate(0px, -50%) rotate(0deg);
+      z-index: -1;
+      @media (max-width: 1310px), (max-height: 540px) {
+        width: 400px;
+        top: 40%;
+        right: -130px;
+      }
+      @media (max-width: $md-2), (max-height: 440px) {
+        width: 320px;
+        top: 40%;
+        right: -130px;
+      }
+    }
+  }
+}
+
+.example-question {
+  &__title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    pointer-events: none;
+    @media (max-width: 1200px), (max-height: 800px) {
+      font-size: 15px;
+    }
+  }
+
+  &__text {
+    margin-top: 12px;
+    font-size: 14px;
+    line-height: 178%;
+    pointer-events: none;
+    letter-spacing: 0.015em;
+    color: $color-grey-mod;
+    @media (max-width: 1200px), (max-height: 800px) {
+      font-size: 13px;
+      margin-top: 8px;
+    }
+  }
+
+  @media screen and (min-width: $md-2) {
+    transition: all 0.3s ease 0s;
+    &:hover {
+      background: #f7fcf9;
+      border: 1px solid #97d5ae;
     }
   }
 }
