--- a/src/scss/parts/main.scss
+++ b/src/scss/parts/main.scss
@@ -2,6 +2,7 @@
 .screen {
   flex: 1 0 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .main {
@@ -27,6 +28,8 @@
   &__team {
   }
   &__contact {
+  }
+  &__example-show {
   }
 }
 //preview block
@@ -997,4 +1000,146 @@
   background-color: $color-white;
   border: 1px solid rgba(0, 0, 0, 0.24);
   border-radius: 4px;
+}
+
+//show example block
+
+.example-show {
+  &__container {
+    position: relative;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    transform: translate(0px, -50%);
+
+    @media screen and (max-height: 680px) {
+      top: calc(50% + 44px);
+    }
+  }
+  &__image-decor {
+    position: absolute;
+    opacity: 0.3;
+    &_first {
+      bottom: 20px;
+      left: -140px;
+      transform: rotate(-20deg);
+      width: 600px;
+
+      @media (max-width: $md-4) {
+        width: 400px;
+      }
+      @media (max-width: $md-3) {
+        width: 300px;
+      }
+      @media (max-width: $md-2) {
+        width: 240px;
+      }
+    }
+    &_second {
+      width: 400px;
+      top: 120px;
+      right: -140px;
+      transform: rotate(50deg);
+      @media (max-width: $md-4) {
+        width: 300px;
+      }
+      @media (max-width: $md-3) {
+        width: 240px;
+      }
+      @media (max-width: $md-2) {
+        width: 180px;
+      }
+    }
+  }
+  &__inner {
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+
+  &__decor-circle {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    animation: move 50s infinite linear;
+    @keyframes move {
+      0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+      }
+      50% {
+        transform: translate(-50%, -50%) rotate(-180deg);
+      }
+      100% {
+        transform: translate(-50%, -50%) rotate(-360deg);
+      }
+    }
+    z-index: -1;
+
+    @media (max-width: $md-2), (max-height: 440px) {
+      width: 330px;
+    }
+  }
+  &__circle {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+    @media screen and (min-width: $md-2) {
+      &:hover {
+        .example-show__gif {
+          filter: brightness(50%);
+        }
+      }
+    }
+
+    @media (max-width: $md-2), (max-height: 440px) {
+      width: 180px;
+      height: 180px;
+    }
+  }
+
+  &__gif {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    transform: translate(-50%, -50%);
+    transition: filter 0.6s ease 0s;
+    @media (max-width: $md-2), (max-height: 440px) {
+      width: 360px;
+    }
+  }
+
+  &__play-icon {
+    position: absolute;
+    top: 50%;
+    left: calc(50% + 10px);
+    width: 80px;
+    transform: translate(-50%, -50%);
+    @media (max-width: $md-2), (max-height: 440px) {
+      width: 60px;
+    }
+  }
+
+  &__image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
+    & img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+      filter: brightness(40%);
+    }
+  }
 }
