--- a/src/scss/parts/header.scss
+++ b/src/scss/parts/header.scss
@@ -15,10 +15,25 @@
       width: 100%;
       height: 139%;
       background: linear-gradient(
-        180deg,
-        rgba(31, 27, 32, 0.91) 0%,
-        rgba(31, 27, 32, 0) 100%
+        to bottom,
+        hsl(0, 0%, 9%) 0%,
+        hsla(0, 0%, 9%, 0.987) 8.1%,
+        hsla(0, 0%, 9%, 0.951) 15.5%,
+        hsla(0, 0%, 9%, 0.896) 22.5%,
+        hsla(0, 0%, 9%, 0.825) 29%,
+        hsla(0, 0%, 9%, 0.741) 35.3%,
+        hsla(0, 0%, 9%, 0.648) 41.2%,
+        hsla(0, 0%, 9%, 0.55) 47.1%,
+        hsla(0, 0%, 9%, 0.45) 52.9%,
+        hsla(0, 0%, 9%, 0.352) 58.8%,
+        hsla(0, 0%, 9%, 0.259) 64.7%,
+        hsla(0, 0%, 9%, 0.175) 71%,
+        hsla(0, 0%, 9%, 0.104) 77.5%,
+        hsla(0, 0%, 9%, 0.049) 84.5%,
+        hsla(0, 0%, 9%, 0.013) 91.9%,
+        hsla(0, 0%, 9%, 0) 100%
       );
+
       top: 0;
       left: 0;
       z-index: -1;
@@ -95,6 +110,7 @@
       flex-flow: column nowrap;
       align-items: center;
       justify-content: center;
+
       &._active {
         top: 0;
       }
