--- a/src/scss/parts/main.scss
+++ b/src/scss/parts/main.scss
@@ -2,6 +2,7 @@
 .screen {
   flex: 1 0 100%;
   position: relative;
+  min-height: 460px;
   overflow: hidden;
 }
 
@@ -19,8 +20,7 @@
     width: 100%;
     height: 100%;
   }
-  &__preview-screen {
-  }
+
   &__benefits {
   }
   &__questions {
@@ -253,7 +253,7 @@
     left: 0;
     overflow: hidden;
     pointer-events: none;
-    background-color: rgba(6, 94, 32, 0.329);
+    background-color: rgba(8, 8, 8, 0.644);
     & video {
       position: absolute;
       width: 100%;
@@ -774,6 +774,7 @@
 //contact
 
 .contact {
+  overflow: hidden;
   &__container {
     position: relative;
     top: 50%;
